--- a/package.json
+++ b/package.json
@@ -8,12 +8,19 @@
     "npm": "6.13.4"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node -r dotenv/config server/index.js",
+    "dev": "nodemon -r dotenv/config server/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0"
+  },
+  "devDependencies": {
+    "dotenv": "^8.2.0",
+    "nodemon": "^2.0.2"
   }
 }
