--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "npm": "6.13.4"
   },
   "scripts": {
-    "start": "node -r dotenv/config server/index.js",
+    "start": "node server/index.js",
     "dev": "nodemon -r dotenv/config server/index.js"
   },
   "keywords": [],
